# pictureEditor

./: README.MD  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 蓝调街拍-益墨素材10.cube
app/src/main/res/drawable/: bg_frame_mix_channel.xml  bg_frame_usm.xml  tab_orange_selecter.xml  tab_purple_selecter.xml  tab_selecter.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/src/main/: AndroidManifest.xml
opencv/src/main/assets/: 赛博朋克科幻[缇米设计]-5 强度5.cube
opencv/src/main/cpp/: BeautyPeople.cpp  CMakeLists.txt  ColorBalance.cpp  FaceLandmark.cpp  FaceOption.cpp  FaceOption.h  GrassBitmap.cpp  HightLightAndDarkLight.cpp  Hsb.cpp  HsbNew.cpp  HsbNew.h  Mask.cpp  Mask.h  MixImageLayer.cpp  MixImageLayer.h  ShapeChange.cpp  SoftSkin.cpp  SplineInterpolation.cpp  Superres.cpp  Superres.h  Test.cpp  Test.h  effects.cpp  effects.h  filter.cpp  image_function.cpp  native-lib.cpp  utils.cpp
opencv/src/main/cpp/include/opencv2/: cvconfig.h  opencv_modules.hpp
opencv/src/main/cpp/include/opencv2/base/: HightLightAndDarkLight.h
opencv/src/main/cpp/include/opencv2/beauty/: AffineTransfrom.cpp  AffineTransfrom.h  BeautyIris.cpp  BeautyIris.h  BeautyPeople.h  EyeBrow.cpp  EyeBrow.h  EyeLash.cpp  EyeLash.h  EyeLid.cpp  EyeLid.h  EyeLine.cpp  EyeLine.h  EyeShadow.cpp  EyeShadow.h  FaceBlush.cpp  FaceBlush.h  FaceLandmark.h  MakeupBase.cpp  MakeupBase.h  MeanFilter.cpp  MeanFilter.h
opencv/src/main/cpp/include/opencv2/color/: ColorBalance.h
opencv/src/main/cpp/include/opencv2/colorSpaceChange/: TRGB2HSV.cpp  TRGB2HSV.h  TRGB2YCbCr.cpp  TRGB2YCbCr.h  TRGB2YUV.cpp  TRGB2YUV.h
opencv/src/main/cpp/include/opencv2/filter/: GaussFilter.cpp  GaussFilter.h  filter.h
opencv/src/main/cpp/include/opencv2/gapi/: core.hpp
opencv/src/main/cpp/include/opencv2/grass/: GrassBitmap.h
opencv/src/main/cpp/include/opencv2/hsl/: ColorSpace.cpp  ColorSpace.hpp  HSL.cpp  HSL.hpp  Hsb.h
opencv/src/main/cpp/include/opencv2/imageFunction/: bean.h  image_function.h
opencv/src/main/cpp/include/opencv2/lite/: models.h  ncnn_config.h  ncnn_defs.h  ncnn_types.h
opencv/src/main/cpp/include/opencv2/lite/cv/: ncnn_age_googlenet.h  ncnn_cava_combined_face.h  ncnn_cava_ghost_arcface.h  ncnn_center_loss_face.h  ncnn_colorizer.h  ncnn_deeplabv3_resnet101.h  ncnn_densenet.h  ncnn_efficient_emotion7.h  ncnn_efficient_emotion8.h  ncnn_efficientnet_lite4.h  ncnn_emotion_ferplus.h  ncnn_face_landmarks_1000.h  ncnn_faceboxes.h  ncnn_faceboxesv2.cpp  ncnn_faceboxesv2.h  ncnn_facenet.h  ncnn_fast_style_transfer.h  ncnn_fcn_resnet101.h  ncnn_female_photo2cartoon.h  ncnn_focal_arcface.h  ncnn_focal_asia_arcface.h  ncnn_gender_googlenet.h  ncnn_ghostnet.h  ncnn_glint_arcface.h  ncnn_glint_cosface.h  ncnn_glint_partial_fc.h  ncnn_hdrdnet.h  ncnn_ibnnet.h  ncnn_insectid.h  ncnn_mobile_emotion7.h  ncnn_mobile_facenet.h  ncnn_mobilenetv2.h  ncnn_mobilenetv2_68.h  ncnn_mobilenetv2_se_68.h  ncnn_mobilese_focal_face.h  ncnn_modnet.h  ncnn_nanodet.h  ncnn_nanodet_depreciated.h  ncnn_nanodet_efficientdet_lite_depreciated.h  ncnn_nanodet_efficientnet_lite.h  (+29 more)
opencv/src/main/cpp/include/opencv2/lut/: Lut.cpp  Lut.h  lut3d.cpp  lut3d.h
opencv/src/main/cpp/include/opencv2/match/: SplineInterpolation.h
opencv/src/main/cpp/include/opencv2/shapeChange/: ShapeChange.h
opencv/src/main/cpp/include/opencv2/skin/: CommenMixLayer.cpp  CommenMixLayer.h  SkinColor.cpp  SkinColor.h  SkinDetect.cpp  SkinDetect.h  SkinPdf.cpp  SkinPdf.h  SoftSkin.h
opencv/src/main/cpp/include/opencv2/utils/: Commen.h  utils.h
opencv/src/main/cpp/lips/: LipsColorChange.cpp  LipsColorChange.h
opencv/src/main/cpp/ncnn/armeabi-v7a/lib/cmake/ncnn/: ncnn.cmake
opencv/src/main/cpp/nose/: SteroNose.cpp  SteroNose.h
opencv/src/main/res/color/: tab_text.xml
opencv/src/main/res/drawable/: bg_animation_corner.xml  bg_text_normal.xml  btn_selector.xml  btn_take_photo.xml  btn_write_selector.xml  ic_loadding_animation.xml  ic_rgb.xml  tab_black_selecter.xml  tab_blue_selecter.xml  tab_carmine_selecter.xml  tab_cyan_selecter.xml  tab_green_selecter.xml  tab_red_selecter.xml  tab_rgb_selecter.xml  tab_white_selecter.xml  tab_yellow_selecter.xml
opencv/src/main/res/layout/: activity_camera.xml
opencv/src/main/res/raw/: camera_frag.fsh  texture_color_fragtment_shader.glsl  texture_fragtment_shader.glsl  texture_oes_fragtment_shader.glsl  texture_vertex_shader.glsl
opencv/src/main/res/values/: color.xml  strings.xml
(+5 files in other folders)
